# code-factory

./: .gitignore  .linear.toml  AGENTS.md  LICENSE  Makefile  README.md  SPEC.md  UBIQUITOUS_LANGUAGE.md  WORKFLOW.md  pyproject.toml
.agents/skills/symphony-setup/: SKILL.md
.github/workflows/: publish.yml
docs/: cli.md  code-factory-overview.drawio  code-factory-quality-gates.drawio  code-factory-typical-workflow.drawio  observability.md  ticket-cli.md
docs/specs/features/: native-ai-review.md
docs/workflow/: README.md  frontmatter.md  prompt-template.md
src/code_factory/: __init__.py  __main__.py  cli.py  errors.py  issues.py  project_init.py  structured_results.py
src/code_factory/application/: __init__.py  bootstrap.py  dashboard.py  dashboard_format.py  dashboard_render.py  log_paths.py  logging.py  project_links.py  service.py
src/code_factory/coding_agents/: __init__.py  base.py  review_models.py
src/code_factory/config/: __init__.py  defaults.py  models.py  parsing.py  review.py  utils.py  validation.py
src/symphony/: __init__.py  cli.py  errors.py
tests/: conftest.py  test_ai_review_triggers.py  test_ai_review_units.py  test_app_server.py  test_application_dashboard.py  test_bootstrap_units.py  test_cli_review.py  test_cli_steering.py  test_codex_edge_units.py  test_coding_agents_and_observability.py  test_control_plane.py  test_core.py  test_coverage_helpers.py  test_dynamic_tool.py  test_foundations.py  test_linear_ops_coverage.py  test_linear_ops_remaining_coverage.py  test_native_review_units.py  test_project_init.py  test_project_name_coverage.py  test_review_comments.py  test_review_ports.py  test_review_session_units.py  test_review_textual.py  test_review_units.py  test_runtime_edge_units.py  test_runtime_units.py  test_trackers_units.py  test_verify_remaining_coverage.py  test_worker_orchestrator.py  test_workflow_ai_review.py  test_workflow_template_defaults.py  test_workpad_autosync.py
tests/application/: test_application_dashboard.py  test_bootstrap_units.py
tests/architecture/: test_architecture.py
tests/cli/: test_cli_review.py  test_cli_steering.py
tests/coding_agents/: test_app_server.py  test_codex_edge_units.py  test_coding_agents_and_observability.py  test_dynamic_tool.py
tests/integration/: helpers.py  support.py  test_failure_recovery.py  test_service_observability.py  test_steering.py  test_workflow_lifecycle.py
tests/runtime/: test_control_plane.py  test_native_merge_units.py  test_native_review_units.py  test_runtime_edge_units.py  test_runtime_units.py  test_worker_orchestrator.py  test_workpad_autosync.py
tests/trackers/: test_linear_ops_coverage.py  test_linear_ops_remaining_coverage.py  test_trackers_units.py
tests/workflow/: test_workflow_ai_review.py  test_workflow_template_defaults.py
tests/workspace/: test_ai_review_triggers.py  test_ai_review_units.py  test_review_comments.py  test_review_ports.py  test_review_session_units.py  test_review_textual.py  test_review_units.py
(+232 files in other folders)
