[project]
name = "code-factory-agent"
version = "0.4.0"
description = "Extended Python asyncio port of the OpenAI Symphony spec"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "Benjoyo" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "aiohttp>=3.11.13,<4",
  "httpx>=0.28.1,<0.29",
  "pydantic>=2.11.7,<3",
  "PyYAML>=6.0.2,<7",
  "python-liquid>=2.1.0,<3",
  "rich>=14.2.0,<15",
  "textual>=8.1.0,<9",
  "typer>=0.16.0,<0.17",
  "watchfiles>=1.1.1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9",
  "pytest-asyncio>=0.25.3,<1",
  "pytest-cov>=6.1.1,<7",
  "pyright>=1.1.398,<2",
  "ruff>=0.11.0,<0.12",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.scripts]
cf = "code_factory.cli:main"

[project.urls]
Homepage = "https://github.com/Benjoyo/code-factory"
Repository = "https://github.com/Benjoyo/code-factory"
Documentation = "https://github.com/Benjoyo/code-factory/blob/main/README.md"
Issues = "https://github.com/Benjoyo/code-factory/issues"
Changelog = "https://github.com/Benjoyo/code-factory/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/code_factory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "I", "UP", "RUF100"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytestarch>=4.0.1",
]
